<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/name_hint"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/toppings_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/toppings_label"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/whipped_cream_topping_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="addCreamTopping"
        android:text="@string/whipped_cream_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toppings_label_text_view" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/chocolate_topping_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="addChocolateTopping"
        android:text="@string/chocolate_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whipped_cream_topping_checkbox" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/quantity_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/quantity_label"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chocolate_topping_checkbox" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/increment_button"
        app:layout_constraintTop_toBottomOf="@+id/quantity_label_text_view"
        tools:text="0" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/increment_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="incrementQuantity"
        android:text="@string/increment_button_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_label_text_view" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/decrement_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="decrementQuantity"
        android:text="@string/decrement_button_label"
        app:layout_constraintStart_toEndOf="@+id/quantity_text_view"
        app:layout_constraintTop_toBottomOf="@+id/quantity_label_text_view" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/price_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/price_label"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/increment_button" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_label_text_view"
        tools:text="Rs. 0" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_text_view" />


</android.support.constraint.ConstraintLayout>
